tests/test168.rael.exp
Error [1:1]: 'skip' has to be inside a loop
| skip
| ^
